# esp32-clion-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  cppcheck.py  espidf_source.bat  flash_and_monitor.bat  idf.bat  partitions.csv  setup.py
cmake/: clangformat.cmake  compilerwarnings.cmake  pch.cmake
main/: CMakeLists.txt  idf_component.yml
main/src/: main.cpp
